feat: enhance user input handling and update role-based access control
- Standardized user input by trimming and converting `username` and `email` to lowercase in `AuthService`.
- Updated default role assignment to include both `READER` and `AUTHOR` roles during registration.
- Refined `SecurityConfig` with detailed role-based permissions for `posts`, `tags`, and admin-related endpoints.